--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "express-async-errors": "3.1.1",
     "joi": "17.6.0",
     "jsonwebtoken": "8.5.1",
-    "mysql2": "2.3.0"
+    "mysql2": "2.3.0",
+    "zod": "^3.21.4"
   }
 }
